@@ -14,6 +14,8 @@ ChangeLog for wpa_supplicant
 	  with nl80211
 	* added support for WPS USBA out-of-band mechanism with USB Flash
 	  Drives (UFD) (CONFIG_WPS_UFD=y)
+	* driver_ndis: add PAE group address to the multicast address list to
+	  fix wired IEEE 802.1X authentication
 
 2009-01-06 - v0.6.7
 	* added support for Wi-Fi Protected Setup (WPS)
